# Gesture-Detection

./: .gitignore  CustomizeTraining.py  GestureDetection.py  pyproject.toml
training/: AugmentImages.py  CustomizeTraining.py  pyproject.toml
