[project]
name        = "Gesture-Detection"
version     = "0.0.1"
description = "Detect various gestures and classify commands"
readme      = "README.md"
keywords    = ["opencv", "computer vision", "visual computing"]
requires-python = ">=3.9.0"
dependencies    = [
  "numpy>=1.24.1",
  "opencv-python>=4.8.0.74"
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[tool.setuptools]
packages = { find = {exclude = ["templates", "test_images"]} }